(example-jetty) - Add Graalvm native-image build profile