@@ -6,13 +6,18 @@
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
-    <version>3.2</version>
+    <version>3.9</version>
     <relativePath/>
   </parent>
 
   <groupId>org.example</groupId>
   <artifactId>example-jetty</artifactId>
   <version>1</version>
+
+  <properties>
+    <java.release>17</java.release>
+    <native.maven.plugin.version>0.9.16</native.maven.plugin.version>
+  </properties>
 
   <dependencies>
 
@@ -104,5 +109,58 @@
       </plugin>
     </plugins>
   </build>
+
+
+  <profiles>
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>${native.maven.plugin.version}</version>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>build-native</id>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+              <execution>
+                <id>test-native</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <metadataRepository>
+                <enabled>true</enabled>
+              </metadataRepository>
+              <imageName>mytest</imageName>
+              <mainClass>org.example.JMain</mainClass>
+              <buildArgs>
+                <!-- needed for jdk.httpserver module -->
+                <buildArg>-J--add-modules</buildArg>
+                <buildArg>-JALL-SYSTEM</buildArg>
+                <buildArg>--no-fallback</buildArg>
+                <buildArg>--allow-incomplete-classpath</buildArg>
+                <buildArg>-H:IncludeResources=".*/logback\\.xml"</buildArg>
+<!--                <buildArg>-H:IncludeResources="content/.*"</buildArg>-->
+                <buildArg>-H:ReflectionConfigurationFiles=graalvm-meta/reflection.json</buildArg>
+                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger</buildArg>-->
+                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger$1</buildArg>-->
+                <!--                <buildArg>&#45;&#45;trace-object-instantiation=org.slf4j.simple.SimpleLogger</buildArg>-->
+              </buildArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
